Fix the scrollbar & trough

--- a/src/gtk-3.0/3.22/sass/widgets/_misc.scss
+++ b/src/gtk-3.0/3.22/sass/widgets/_misc.scss
@@ -49,7 +49,9 @@ button:visited {
  // for error dialogs.
 
 .terminal,
-.terminal text {
+.terminal text,
+.terminal scrollbar:hover,
+.terminal trough {
     background-color: $neutral_dark_bg_color;
     color: $light_fg_color;
 }
